<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ac_ll_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/today_date"
                    style="@style/MyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_23_12_2019" />

                <TextView
                    android:id="@+id/today_day_of_week"
                    style="@style/MyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/monday" />
            </LinearLayout>

            <TextView
                android:id="@+id/today_time"
                style="@style/MyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_18_55"
                android:textSize="40sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/city"
            style="@style/MyItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:text="Москва" />

        <TextView
            android:id="@+id/about"
            style="@style/MyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:gravity="center"
            android:text="О городе"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/about">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:contentDescription="@string/image"
                android:src="@drawable/t22" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.55"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25"
                        android:textColor="?attr/myTextColor"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divided"
                        android:textColor="?attr/myTextColor2"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/t_night"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_19"
                        android:textColor="?attr/myTextColor2"
                        android:textSize="30sp" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/humidity"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_77"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percent"
                            android:textColor="?attr/myTextColor" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/sunrise_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sunrise"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_07_00"
                            android:textColor="?attr/myTextColor" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/sunset_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/sunset"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_21_00"
                            android:textColor="?attr/myTextColor" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/pressure_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/pressure"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_743"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mmhg_st"
                            android:textColor="?attr/myTextColor" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/wind_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/wind_speed"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2"
                            android:textColor="?attr/myTextColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_s"
                            android:textColor="?attr/myTextColor" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>